--- a/index.html
+++ b/index.html
@@ -80,7 +80,228 @@
             </div>
         </div>
     </nav>
+    <!-- Main Content -->
+
+    <div class="container mt-4">
+        <div class="row">
+
+            <!-- Left Side: Profile, About Me, Experience, Skills, etc. -->
+
+            <div class="col-md-8">
+
+                <!-- Profile Section -->
+
+                <div class="row">
+                    <div class="col-md-4 text-center">
+                        <img src="profile  img1.jpg" alt="Profile Picture"
+                            class="rounded-circle img-thumbnail d-none d-md-block me-3">
+                    </div>
+                    <div class="col-md-8">
+                        <h2>Meenakshi sundaram.M</h2>
+                        <p>Full-Stack Developer | JavaScript | HTML | Node.js</p>
+                        <p>Location: coimbatore, India</p>
+                        <a href="#" class="btn btn-primary my-2">open to</a>
+                        <a href="#" class="btn btn-primary my-2">Enhance profile</a>
+                        <a href="#" class="btn btn-primary my-2">Add profile section</a>
+                    </div>
+                </div>
+
+                <!-- About Me -->
+                <div class="row mt-4">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h3>About Me</h3>
+                                <p>I am a full-stack developer passionate about building responsive web applications.
+                                    With expertise in front-end and back-end technologies, I aim to create efficient and
+                                    scalable
+                                    solutions. Currently, I'm working on developing modern web applications using React,
+                                    Node.js, and AWS.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Experience -->
+                <div class="row mt-4">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h3>Experience</h3>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">
+                                        <h5>Software Engineer at XYZ Corp</h5>
+                                        <p>June 2022 - Present</p>
+                                        <p>Developing scalable web applications using React, Node.js, and AWS.</p>
+                                    </li>
+                                    <li class="list-group-item">
+                                        <h5>Front-End Developer at ABC Inc</h5>
+                                        <p>Jan 2021 - May 2024</p>
+                                        <p>Designed and implemented UI/UX for various client projects using HTML, CSS,
+                                            Bootstrap, and JavaScript.</p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Skills -->
+                <div class="row mt-4">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h3>Skills</h3>
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <ul class="list-group list-group-flush">
+                                            <li class="list-group-item">HTML/CSS</li>
+                                            <li class="list-group-item">JavaScript</li>
+                                            <li class="list-group-item">React</li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <ul class="list-group list-group-flush">
+                                            <li class="list-group-item">Node.js</li>
+                                            <li class="list-group-item">MongoDB</li>
+                                            <li class="list-group-item">AWS</li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <ul class="list-group list-group-flush">
+                                            <li class="list-group-item">Bootstrap</li>
+                                            <li class="list-group-item">MySQL</li>
+                                            <li class="list-group-item">Git & GitHub</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Education -->
+                <div class="row mt-4">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h3>Education</h3>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">
+                                        <h5>Bachelor of Commerce in International Business</h5>
+                                        <p>Sri Ramakrishna college of arts and science</p>
+                                        <p>2021 - 2024</p>
+                                    </li>
+                                    <li class="list-group-item">
+                                        <h5>Full-Stack Development Course</h5>
+                                        <p>Online Bootcamp - FreeCodeCamp</p>
+                                        <p>2023 - 2024</p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Projects -->
+                <div class="row mt-4">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h3>Projects</h3>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">
+                                        <h5>Portfolio Website</h5>
+                                        <p>A personal portfolio website to showcase projects and blogs. Built using
+                                            HTML, CSS, JavaScript, and React.</p>
+                                        <a href="https://github.com/sundaram201224/linkedin-profile/blob/main/index.html"
+                                            class="btn btn-primary">View Project</a>
+                                    </li>
+                                    <li class="list-group-item">
+                                        <h5>E-Commerce Web App</h5>
+                                        <p>A full-stack e-commerce web application with a React frontend and Node.js
+                                            backend, integrated with Stripe for payments.</p>
+                                        <a href="https://github.com/sundaram201224/linkedin-profile/blob/main/index.html"
+                                            class="btn btn-primary">View Project</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Right Side: Suggestions, Connections, and Related LinkedIn Content (4 columns) -->
+            <div class="col-md-4">
+                <!-- Suggestions -->
+                <div class="card">
+                    <div class="card-body">
+                        <h5>People You May Know</h5>
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                <img src="suggestion profile.jpg" alt="User 1" class="rounded-circle me-2">
+                                Jane Smith
+                                <button class="btn btn-outline-primary btn-sm float-end">Connect</button>
+                            </li>
+                            <li class="list-group-item">
+                                <img src="suggestion profile.jpg" alt="User 2" class="rounded-circle me-2">
+                                Robert Brown
+                                <button class="btn btn-outline-primary btn-sm float-end">Connect</button>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Suggested Articles or Job Postings -->
+                <div class="card mt-4">
+                    <div class="card-body">
+                        <h5>Suggested Articles</h5>
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                <a
+                                    href="https://www.freecodecamp.org/news/full-stack-project-tutorial-create-a-notes-app-using-react-and-node-js/">How
+                                    to Build a Full-Stack Web App with React and Node.js</a>
+                            </li>
+                            <li class="list-group-item">
+                                <a
+                                    href="https://medium.com/@sahilattar87860/mastering-javascript-in-2024-a-comprehensive-guide-1b132d7816f1">5
+                                    Tips for Mastering JavaScript in 2024</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Suggested Job Postings -->
+                <div class="card mt-4">
+                    <div class="card-body">
+                        <h5>Job Postings</h5>
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                <a href="https://mytat.co/job-listing/full-stack-developer-44487">Full-Stack Developer
+                                    at TechCorp</a>
+                            </li>
+                            <li class="list-group-item">
+                                <a href="https://www.factorial.io/en/blog/how-i-became-frontend-developer-one-year">Front-End
+                                    Developer at Webify</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Footer Section -->
+    <footer class="footer-section">
+        <p>&copy; 2024 LinkedIn Clone. All rights reserved.</p>
+        <p><a href="https://www.linkedin.com/legal/jobs-terms-conditions">Privacy Policy</a> | <a
+                href="https://www.linkedin.com/legal/jobs-terms-conditions">Terms of Service</a></p>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
